--- a/Responsive Website/about.html
+++ b/Responsive Website/about.html
@@ -18,7 +18,7 @@
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
-            <li><a href="">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="about.html">about</a></li>
             <li><a href="">course</a></li>
             <li><a href="">blog</a></li>
