--- a/Responsive Website/index.html
+++ b/Responsive Website/index.html
@@ -19,7 +19,7 @@
           <i class="fa fa-times" onclick="hideMenu()"></i>
           <ul>
             <li><a href="">home</a></li>
-            <li><a href="">about</a></li>
+            <li><a href="about.html">about</a></li>
             <li><a href="">course</a></li>
             <li><a href="">blog</a></li>
             <li><a href="">contact</a></li>
