--- a/Contact Form/index.html
+++ b/Contact Form/index.html
@@ -28,6 +28,30 @@
           <label for="#">Message</label>
         </div>
         <div class="form-control">
+          <textarea cols="30" rows="5" required></textarea>
+          <label for="#">Message</label>
+        </div>
+        <div class="form-control">
+          <textarea cols="30" rows="5" required></textarea>
+          <label for="#">Message</label>
+        </div>
+        <div class="form-control">
+          <textarea cols="30" rows="5" required></textarea>
+          <label for="#">Message</label>
+        </div>
+        <div class="form-control">
+          <textarea cols="30" rows="5" required></textarea>
+          <label for="#">Message</label>
+          <div class="form-control">
+            <textarea cols="30" rows="5" required></textarea>
+            <label for="#">Message</label>
+          </div>
+          <div class="form-control">
+            <textarea cols="30" rows="5" required></textarea>
+            <label for="#">Message</label>
+          </div>
+        </div>
+        <div class="form-control">
           <input type="submit" value="Form Submit" />
         </div>
       </form>
